manifests/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-backend
  template:
    metadata:
      labels:
        app: payment-backend
    spec:
      containers:
        - name: payment-backend
          image: 811288377093.dkr.ecr.us-west-2.amazonaws.com/payment-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
